--- a/test.html
+++ b/test.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>sdfgsdfgdsfg</head>
+    <head>
+        <title>Заголовок страницы</title>
+    </head>
+    <body>
+        <p> текст текст текст текст текст текст текст текст текст</p>
+    </body>
 </html>
