--- a/test.html
+++ b/test.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Заголовок над нашим текстом</h1>
         <p> текст текст текст текст текст текст текст текст текст</p>
+        <a href="#"> Link text </a>
     </body>
 </html>
